Updated for minecraft 1.21.9 (still need some fixes)